[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameobjects/Elevator.gd" type="Script" id=1]
[ext_resource path="res://gameobjects/phone_material.tres" type="Material" id=2]
[ext_resource path="res://sfx/elevator_doors.wav" type="AudioStream" id=3]
[ext_resource path="res://models/environment/elevator.tscn" type="PackedScene" id=4]
[ext_resource path="res://sfx/elevator_ding.wav" type="AudioStream" id=5]
[ext_resource path="res://static_bodies/BoxBody.tscn" type="PackedScene" id=6]

[sub_resource type="CubeMesh" id=8]

[node name="Elevator" type="Spatial"]
script = ExtResource( 1 )

[node name="elevator" type="Spatial" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0658407, 0 )

[node name="LeftDoor" type="MeshInstance" parent="."]
transform = Transform( 1.2, 0, 0, 0, 2.24382, 0, 0, 0, 0.0561455, -1.21292, 2.27159, 1.50145 )
mesh = SubResource( 8 )
material/0 = ExtResource( 2 )

[node name="door_sound" type="AudioStreamPlayer3D" parent="LeftDoor"]
transform = Transform( 0.833333, 0, 0, 0, 0.445669, 0, 0, 0, 17.8109, 0, -0.964849, 0 )
stream = ExtResource( 3 )
bus = "Sound Effects"

[node name="RightDoor" type="MeshInstance" parent="."]
transform = Transform( 1.2, 0, 0, 0, 2.24382, 0, 0, 0, 0.0561455, 1.20021, 2.27159, 1.50145 )
mesh = SubResource( 8 )
material/0 = ExtResource( 2 )

[node name="door_sound" type="AudioStreamPlayer3D" parent="RightDoor"]
transform = Transform( 0.833333, 0, 0, 0, 0.445669, 0, 0, 0, 17.8109, 0, -0.964849, 0 )
stream = ExtResource( 3 )
unit_db = -3.478
unit_size = 0.2
bus = "Sound Effects"

[node name="ding_play" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.19738, 1.79745 )
stream = ExtResource( 5 )
unit_db = 24.552
unit_size = 0.5
max_db = 3.454
max_distance = 20.0
bus = "Sound Effects"

[node name="BoxBody" type="StaticBody" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.218785, 0, 0, 0, 2.09068, 0, 0, 0, 2.03524, 2.34315, 2.35672, 0 )

[node name="BoxBody4" type="StaticBody" parent="." instance=ExtResource( 6 )]
transform = Transform( -9.56339e-09, 0, 2.03524, -0.218785, -9.13866e-08, -8.89633e-08, 9.56339e-09, -2.09068, 3.88871e-15, 0, 4.88103, 0 )

[node name="BoxBody2" type="StaticBody" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.218785, 0, 0, 0, 2.09068, 0, 0, 0, 2.03524, -2.343, 2.357, 0 )

[node name="BoxBody3" type="StaticBody" parent="." instance=ExtResource( 6 )]
transform = Transform( -9.56339e-09, 0, 2.03524, 0, 2.09068, 0, -0.218785, 0, -8.89633e-08, 0, 2.357, -1.76145 )
